Footer fixed in portfolio. Pics lined up as they should - with an opaque overlay for the effect. Different z-indexes added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,17 @@
   -o-background-size: cover;
 }
 
+.bg-portfolio {
+  width: 100%;
+  background-color: #050505;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+}
+
 .bg-about {
   height: 100vh;
   width: 100%;
@@ -60,25 +71,6 @@
   -o-background-size: cover;
 }
 
-#bg-zindex {
-    z-index: -1;
-}
-
-#photo {
-  clear: both;
-  line-height: 0;
-  column-count: 4;
-  column-gap: 0px;
-  position: absolute;
-  top: 60px;
-  left: 0px;
-  z-index: 1;
-}
-
-#photo img {
-  width: 100%;
-}
-
 .opaque-overlay {
   position: absolute;
   top: 0;
@@ -93,6 +85,37 @@
   -webkit-transition: all 0.75s ease;
 }
 
+#photo {
+  clear: both;
+  line-height: 0;
+  column-count: 4;
+  column-gap: 0px;
+  position: absolute;
+  top: 60px;
+  left: 0px;
+  overflow: hidden;
+  z-index: 1;
+}
+
+#photo img {
+  width: 100%;
+}
+
+#opaque-overlay-photos {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: all 0.75s ease;
+  -moz-transition: all 0.75s ease;
+  -webkit-transition: all 0.75s ease;
+  z-index: 2;
+}
+
 .bg-color-footer {
   background-color: #777777;
   background-position: center;
@@ -101,7 +124,6 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  overflow: visible;
 }
 
 /*------------------------------Navbar */
@@ -148,9 +170,12 @@
 
 /*----------------------------Footer */
 
-footer {
+#footer {
+    position: fixed;
+    bottom: 0px;
     width: 100%;
     margin: 0;
+    z-index: 10;
 }
 
 .row {
@@ -178,6 +203,7 @@ footer {
 
 .social-links {
   text-align: center;
+  z-index: inherit;
 }
 
 .social-links i {
@@ -195,6 +221,17 @@ footer {
 
 /*----------------------------Media Queries */
 
+@media screen and (max-width: 943px) {
+      #photo {
+    column-count: 3;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #photo {
+    column-count: 2;
+  }
+}
 
 @media (max-width: 576px) {
   .navbar-nav {
